force-app/main/default/objects/Opportunity/fields/Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address__c</fullName>
    <formula>Primary_Container_Request__r.Service_Location__r.Street__c &amp; ', ' &amp; Primary_Container_Request__r.Service_Location__r.City__c &amp; ', ' &amp; Primary_Container_Request__r.Service_Location__r.Province__c &amp; ' ' &amp; Primary_Container_Request__r.Service_Location__r.Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Delivery Address</label>
    <type>Text</type>
</CustomField>