force-app/main/default/objects/Opportunity/fields/Primary_Container_Request__c.field-meta.xml
<CustomField>
    <fullName>Primary_Container_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Container Request</label>
    <referenceTo>Container_Request__c</referenceTo>
    <relationshipName>PrimaryContainerRequest</relationshipName>
    <type>Lookup</type>
</CustomField>