force-app/main/default/objects/Opportunity/fields/Requested_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Delivery_Date__c</fullName>
    <formula>Primary_Container_Request__r.Requested_Delivery_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Requested Delivery Date</label>
    <returnType>Date</returnType>
    <type>Formula</type>
</CustomField>