force-app/main/default/objects/Opportunity/fields/Selected_Container__c.field-meta.xml
<CustomField>
    <fullName>Selected_Container__c</fullName>
    <formula>Primary_Container_Request__r.Container_Inventory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Selected Container</label>
    <type>Text</type>
</CustomField>